# .textadept

./: .gitignore  .gitmodules  .luacheckrc  .stylua.toml  README.md  init.lua
lexers/: cpp.lua  lua.lua  perl.lua  python.lua  rust.lua  tagit.lua
modules/autoformat/: init.lua
modules/clippy/: init.lua
modules/color/: init.lua
modules/cpp/: README.md  init.lua
modules/ctags/: init.lua
modules/ctags_redux/: README.md  init.lua
modules/exec/: init.lua
modules/favorites/: init.lua
modules/format/: init.lua
modules/git/: init.lua
modules/origin/: init.lua
modules/perl/: api  init.lua
modules/qapp/: init.lua
modules/quicknav/: init.lua
modules/run/: init.lua
modules/spellcheck/: .luacov  CMakeLists.txt  LICENSE  README.md  init.lua  init_test.lua  spell.cxx
modules/tagit/: README.md  blame.lua  branch.lua  cherry_pick.lua  commit.lua  common.lua  console.lua  diff.lua  fetch.lua  git.lua  help.lua  init.lua  log.lua  operation.lua  push.lua  reset.lua  revert.lua  stash.lua  status.lua  transient.lua
modules/util/: init.lua  simple_html_indent_tool.pl
themes/: dark.lua  everforest.lua  flatbox.lua  goofbox_h.lua  goofbox_m.lua  goofbox_s.lua  gruvbox.lua  solarbox.lua  space.lua
